Separate mesh by material creates meshes with all the materials from the original #36349

Closed
opened 2013-08-02 07:07:31 +02:00 by Alex McTrees · 3 comments

%%%--- Operating System, Graphics card ---

Debian 7, NVIDIA GeForce FX 5600

- Blender version with error, and version that worked ---

Blender 2.68
Blender 2.49 had no such problem importing .obj files with a "split by material" option

- Short description of error ---

Separate mesh by material creates meshes with all the materials from the original.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Import or create mesh with several materials, separate it by materials. Each created mesh will have all the materials from the original mesh.
%%%

%%%--- Operating System, Graphics card --- Debian 7, NVIDIA GeForce FX 5600 - Blender version with error, and version that worked --- Blender 2.68 Blender 2.49 had no such problem importing .obj files with a "split by material" option - Short description of error --- Separate mesh by material creates meshes with all the materials from the original. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Import or create mesh with several materials, separate it by materials. Each created mesh will have all the materials from the original mesh. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r59139.%%%

%%%fixed r59139.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36349
No description provided.