fix [#36349] Separate mesh by material creates meshes with all the materials from the original